backend/src/main/java/com/test/extensionblock/error/ExtensionNameValidationException.java
package com.test.extensionblock.error;

public class ExtensionNameValidationException extends RuntimeException{
    public ExtensionNameValidationException(String message) {
        super(message);
    }
}
